--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,11 @@ div #logo img {
   border-radius: 5px;
 }
 
+#searchbar input[type="text"]:focus {
+  background-color: #bffffa;
+  outline: none;
+}
+
 #searchbar button {
   width: 150px;
   height: 50px;
@@ -70,7 +75,7 @@ div #topright {
 }
 
 #topright button {
-  width: 100px;
+  width: 120px;
   height: 60px;
   margin: 10px;
   cursor: pointer;
@@ -227,7 +232,6 @@ div #topright {
 .product-divider h1 {
   margin: 50px 0 50px 0;
   text-align: center;
-  color: red;
 }
 
 .product-container {
@@ -248,11 +252,16 @@ div #topright {
   max-width: 100%;
   height: auto;
 }
+
 .product-container h2 {
   background-color: lightgrey; /* Set the background color to grey */
   padding: 10px; /* Add some padding to the header */
   margin: 0; /* Remove the default margin */
   border-radius: 15px; /* Add rounded corners */
+  height: 100px; 
+  display: flex; 
+  align-items: center;
+  justify-content: center;
 }
 
 .price-container {
