--- a/css/itemstyles.css
+++ b/css/itemstyles.css
@@ -218,3 +218,53 @@
 .addcart-button:hover {
 	background-color: #005F77; /* Button background color on hover */
 }
+
+
+
+
+.itemform-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.itemform label {
+  float: left;
+  text-align: right;
+  width: 150px;
+  padding: 7px 10px 0px 0px;
+  font-weight: bold;
+}
+
+.itemform #name, #email, #contact {
+  width: 400px;
+  border: none;
+}
+
+.itemform #name, #email, #contact, #message {
+  padding: 10px;
+  border-radius: 10px;
+  border: none;
+  font-size: 14px;
+}
+
+.itemform button {
+  margin: 30px 0px 30px 0px;
+  padding: 10px;
+  border: none;
+  border-radius: 10px;
+  transition: all 0.3s;
+  font-size: 20px;
+  background-color: #008CBA;
+  color: white;
+}
+
+#submitbutton {
+  margin-left: 10px;
+}
+
+.itemform button:hover {
+  transform: scale(1.05, 1.05);
+  background-color: #005F77;
+}
