--- a/css/styles.css
+++ b/css/styles.css
@@ -271,7 +271,7 @@ button#login-button:hover, button#logout-button:hover {
 .product-divider {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   margin: 0 -10px;
 }
 
