--- a/css/checkoutstyles.css
+++ b/css/checkoutstyles.css
@@ -45,3 +45,50 @@
 .checkout-table th, .checkout-table td {
     padding: 8px; /* Add padding to cells for better spacing */
 }
+
+.checkoutform-wrapper {
+    width: 100%; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.checkoutform label {
+    float: left;
+    text-align: right;
+    width: 150px;
+    padding: 7px 10px 0px 0px; 
+    font-weight: bold;
+}
+
+.checkoutform #name, #email, #contact {
+    width: 400px;
+    border:none;
+}
+
+.checkoutform #name, #email, #contact, #address {
+    padding:10px;
+    border-radius: 10px;
+    border:none;
+    font-size: 14px;
+}
+
+.checkoutform button {
+    margin: 30px 0px 30px 0px;
+    padding: 10px;
+    border:none;
+    border-radius: 10px;
+    transition: all 0.3s;
+    font-size: 20px;
+    background-color: #008CBA;
+    color:white;
+}
+
+#submitbutton {
+    margin-left: 10px;
+} 
+
+.checkoutform button:hover {
+    transform: scale(1.05, 1.05);
+    background-color: #005F77;
+}
