--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ h1 {
   letter-spacing: 3px;
 }
 
-#navbar {
+#navbar, #sitemap {
   font-family: 'Electrolize', sans-serif;
   letter-spacing: 3px;
 }
@@ -182,6 +182,7 @@ button#login-button:hover, button#logout-button:hover {
 /* Set a style for the submit/login button */
 .loginform-container .btn {
   background-color: #0CF1DE;
+  /* background-color: #008CBA; */
   font-size: 20px;
   padding: 20px 0px 20px 0px;
   border: none;
@@ -190,11 +191,14 @@ button#login-button:hover, button#logout-button:hover {
   opacity: 0.8;
   border-radius: 10px;
   margin-top: 20px;
+  transition: all 0.3s;
 } 
 
 /* Add some hover effects to buttons */
 .loginform-container .btn:hover {
+  background-color: #0CF1DE;
   opacity: 1;
+  transform: scale(1.01, 1.01);
 }
 
 .loginform-container h1 {
@@ -523,7 +527,7 @@ h1#emailus, div#rightbanner{
   font-size: 14px;
 }
 
-.contactform button {
+.contactform button, .update-button {
   margin: 30px 0px 30px 0px;
   padding: 10px;
   border:none;
@@ -538,7 +542,7 @@ h1#emailus, div#rightbanner{
   margin-left: 10px;
 } 
 
-.contactform button:hover {
+.contactform button:hover, .update-button:hover {
   transform: scale(1.05, 1.05);
   background-color: #005F77;
 }
@@ -616,3 +620,18 @@ h1#emailus, div#rightbanner{
   content: "★"; /* Filled star symbol */
 }
 
+.Inventory_Content_Wrapper {
+  margin: 0 auto;
+  max-width: 100%;
+}
+
+.inventoryform-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+table#inventorytable th, td{
+  padding: 10px;
+  text-align: center;
+}
