--- a/css/styles.css
+++ b/css/styles.css
@@ -495,6 +495,10 @@ h1#emailus, div#rightbanner{
     margin:0;
     padding: 20px;
   }
+
+  .socialmedia i {
+    font-size: 30px;
+  }
 /* ---END OF FOOTER--- */
 
 
@@ -631,4 +635,13 @@ h1#emailus, div#rightbanner{
 table#inventorytable th, td{
   padding: 10px;
   text-align: center;
+}
+
+.fa-facebook, .fa-instagram, .fa-x-twitter, .fa-tiktok {
+  color:white;
+  padding: 10px;
+}
+
+.fa-facebook:hover, .fa-instagram:hover, .fa-x-twitter:hover,  .fa-tiktok:hover {
+  color: #0CF1DE;
 }
