--- a/css/styles.css
+++ b/css/styles.css
@@ -2,9 +2,10 @@ body {
   font-family: 'Roboto', sans-serif;
   margin: 0;
   padding: 0;
-  background-image: url("../../IE4717-Project/images/background1.jpg");
-  background-size: 100%;
+  background-image: url("../../IE4717-Project/images/background-1.jpg");
+  background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
 }
 
 /* FONT CUSTOMIZATION */
@@ -23,7 +24,7 @@ h4, h2, button, input, textarea {
   letter-spacing: 1px;
 }
 
-button.btn {
+button.btn, #registerbutton {
   font-family: 'Orbitron', sans-serif;
 }
 /* FONT CUSTOMIZATION */
@@ -144,7 +145,8 @@ button#login-button:hover, button#logout-button:hover {
 /* Add styles to the form container */
 .loginform-wrapper { 
   width: 100%; 
-  height: 500px;
+  margin-top: 50px;
+  margin-bottom: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -153,7 +155,6 @@ button#login-button:hover, button#logout-button:hover {
 .loginform-container {
   width: 500px;
   height: 400px;
-  margin-top: 30px;
   margin-bottom: 30px;
   background-color: white;
   text-align: center;
@@ -205,7 +206,7 @@ button#login-button:hover, button#logout-button:hover {
   text-align: center;
 }
 
-.loginform-container  p {
+.loginform-container p {
   margin-top: 10px;
 }
 
@@ -268,6 +269,7 @@ button#login-button:hover, button#logout-button:hover {
 /* Page-header */
 .page-header {
     text-align: center;
+    margin-top: 50px;
 }
 
 /* Product Container */
@@ -530,7 +532,7 @@ h1#emailus, div#rightbanner{
   font-size: 14px;
 }
 
-.contactform button, .update-button  {
+.contactform button, .update-button {
   margin: 30px 0px 30px 0px;
   padding: 10px;
   border:none;
@@ -552,39 +554,66 @@ h1#emailus, div#rightbanner{
 /* ---END OF CONTACT FORM--- */
 
 /* ---START OF REGISTRATION FORM --- */
+
+.registerform-wrapper {
+  width: 100%; 
+  margin-top: 50px;
+  margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.registerform-container {
+  width: 800px;
+  height: 550px;
+  margin-bottom: 30px;
+  background-color: white;
+  text-align: center;
+  color: black;
+  border-radius: 10px;
+}
+
 .registerform label {
   float: left;
   text-align: right;
   width: 200px;
-  padding: 10px 10px 0px 0px;
+  margin-top: 15px;
   font-weight: bold;
 }
 
-.registerform #name, #email, #contact, #password, #confirmpassword {
-  padding: 10pX;
-  width: 400px;
-  border:none;
+.registerform #name, .registerform #email, .registerform #contact, .registerform #password, .registerform #confirmpassword {
+  width: 60%;
+  height: 30px;
+  font-size: 18px;
+  padding: 10px 0px 10px 20px;
+  border: none;
+  background: #f1f1f1;
   border-radius: 10px;
-  font-size: 14px;
+}
+
+.registerform #name:focus, #email:focus, #contact:focus, #password:focus, #confirmpassword:focus {
+  background-color: #ddd;
+  outline: none;
 }
 
 #registerbutton {
   margin: 30px 0px 30px 0px;
-  padding: 10px;
-  border:none;
+  padding: 20px 0px 20px 0px;
+  border: none;
+  width: 50%;
   border-radius: 10px;
   transition: all 0.3s;
   font-size: 20px;
-} 
-
-#registerform button:hover {
-  transform: scale(1.05, 1.05);
-  background-color: lightgrey;
+  background-color: #0CF1DE;
+  cursor: pointer;
 }
 
-.registerform-wrapper {
-  padding: 50px;
+#registerbutton:hover {
+  opacity: 1;
+  transform: scale(1.01, 1.01);
 }
+
 /* ---END OF REGISTRATION FORM--- */
 
 .empty-wishlist {
