--- a/css/styles.css
+++ b/css/styles.css
@@ -656,7 +656,7 @@ h1#emailus, div#rightbanner{
   margin: 0 auto;
   max-width: 100%;
 }
-.inventoryform-container {
+.inventoryform-container, #update-button-container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -745,4 +745,17 @@ table#inventorytable th, td{
 img#img1, img#img2, img#img3 {
   width: 100%;
   height: 100%;
+}
+
+#inventorytable input[type="checkbox"] {
+  width: 30px;
+  height: 30px;
+}
+
+#inventorytable input[type="text"] {
+  width: 80px;
+  height: 20px;
+  text-align: center;
+  font-weight: bold;
+  font-family: 'Roboto', sans-serif;
 }
